@@ -1,7 +1,6 @@
 package ispp.project.dondesiempre.modules.orders.services;
 
 import ispp.project.dondesiempre.modules.auth.models.User;
-import ispp.project.dondesiempre.modules.auth.repositories.UserRepository;
 import ispp.project.dondesiempre.modules.auth.services.AuthService;
 import ispp.project.dondesiempre.modules.common.exceptions.InvalidRequestException;
 import ispp.project.dondesiempre.modules.common.exceptions.ResourceNotFoundException;
@@ -15,12 +14,14 @@ import ispp.project.dondesiempre.modules.orders.repositories.OrderRepository;
 import ispp.project.dondesiempre.modules.outfits.models.Outfit;
 import ispp.project.dondesiempre.modules.outfits.services.OutfitService;
 import ispp.project.dondesiempre.modules.payment.services.StripeVerificationService;
-import ispp.project.dondesiempre.modules.products.models.Product;
+import ispp.project.dondesiempre.modules.products.models.ProductVariant;
+import ispp.project.dondesiempre.modules.products.services.ProductVariantService;
 import ispp.project.dondesiempre.modules.stores.models.Store;
 import ispp.project.dondesiempre.modules.stores.repositories.StoreRepository;
 import ispp.project.dondesiempre.utils.crypto.CryptoConverter;
 import java.security.SecureRandom;
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -35,9 +36,9 @@ import org.springframework.transaction.annotation.Transactional;
 public class OrderService {
 
   private final OrderRepository orderRepository;
-  private final UserRepository userRepository;
   private final StoreRepository storeRepository;
   private final AuthService authService;
+  private final ProductVariantService productVariantService;
   private final CryptoConverter cryptoConverter;
   private final ApplicationContext applicationContext;
   private final OutfitService outfitService;
@@ -67,19 +68,25 @@ public class OrderService {
       orders = orderRepository.findByUserId(currentUser.getId());
     }
 
-    return orders.stream().map(OrderDTO::new).toList();
+    return orders.stream()
+        .sorted(Comparator.comparing(Order::getOrderDate).reversed())
+        .map(OrderDTO::new)
+        .toList();
   }
 
   @Transactional(readOnly = true)
   public List<OrderDTO> findOrdersByUserId(UUID userId) {
-    return orderRepository.findByUserId(userId).stream().map(OrderDTO::new).toList();
+    return orderRepository.findByUserId(userId).stream()
+        .sorted(Comparator.comparing(Order::getOrderDate).reversed())
+        .map(OrderDTO::new)
+        .toList();
   }
 
   @Transactional(readOnly = true, rollbackFor = ResourceNotFoundException.class)
   public Order findById(UUID id) throws ResourceNotFoundException {
     return orderRepository
         .findById(id)
-        .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + "not found."));
+        .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + " not found."));
   }
 
   @Transactional
@@ -113,9 +120,14 @@ public class OrderService {
     return sb.toString();
   }
 
-  @Transactional(rollbackFor = ResourceNotFoundException.class)
-  public OrderDTO createOrder(Map<Product, Integer> productsToBuy, UUID outfitId)
-      throws ResourceNotFoundException {
+  @Transactional(rollbackFor = { ResourceNotFoundException.class, UnauthorizedException.class })
+  public OrderDTO createOrder(Map<UUID, Integer> variantIdsWithQuantity, UUID outfitId)
+      throws ResourceNotFoundException, UnauthorizedException, IllegalArgumentException {
+
+    if (variantIdsWithQuantity == null || variantIdsWithQuantity.isEmpty()) {
+      throw new IllegalArgumentException("Quantity of products must be greater than 0.");
+    }
+
     User user = authService.getCurrentUser();
 
     Order order = new Order();
@@ -124,12 +136,34 @@ public class OrderService {
     order.setOrderStatus(OrderStatus.PENDING);
     order.setOrderCode(this.generateRandomCode());
 
-    for (Map.Entry<Product, Integer> entry : productsToBuy.entrySet()) {
+    UUID storeId = null;
+
+    for (Map.Entry<UUID, Integer> entry : variantIdsWithQuantity.entrySet()) {
+      if (entry.getValue() == null || entry.getValue() <= 0) {
+        throw new IllegalArgumentException("Quantity of products must be greater than 0.");
+      }
+
+      ProductVariant variant = productVariantService.getProductVariantById(entry.getKey());
+
+      if (!variant.getIsAvailable()) {
+        throw new UnauthorizedException(
+            String.format(
+                "ProductVariant with ID %s is not available for purchase", variant.getId()));
+      }
+
+      UUID currentStoreId = variant.getProduct().getStore().getId();
+      if (storeId == null) {
+        storeId = currentStoreId;
+      } else if (!storeId.equals(currentStoreId)) {
+        throw new IllegalArgumentException("All products shoulde belong to the same store.");
+      }
+
       OrderItem item = new OrderItem();
       item.setOrder(order);
-      item.setProduct(entry.getKey());
+      item.setProduct(variant.getProduct());
+      item.setVariant(variant);
       item.setQuantity(entry.getValue());
-      item.setPriceAtPurchase(entry.getKey().getPriceInCents());
+      item.setPriceAtPurchase(variant.getProduct().getPriceInCents());
 
       order.getItems().add(item);
     }
@@ -152,21 +186,19 @@ public class OrderService {
 
   @Transactional
   public void confirmOrder(UUID orderId) throws UnauthorizedException, ResourceNotFoundException {
-    Order order =
-        orderRepository
-            .findById(orderId)
-            .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
+    Order order = orderRepository
+        .findById(orderId)
+        .orElseThrow(
+            () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
-      boolean verified =
-          stripeVerificationService.checkAccountIsVerifiedForPayments(
-              order
-                  .getStore()
-                  .orElseThrow(
-                      () ->
-                          new InvalidRequestException("There cannot be orders without products.")));
+      boolean verified = stripeVerificationService.checkAccountIsVerifiedForPayments(
+          order
+              .getStore()
+              .orElseThrow(
+                  () -> new InvalidRequestException("There cannot be orders without products.")));
 
-      if (!verified) throw new StoreNotVerifiedException();
+      if (!verified)
+        throw new StoreNotVerifiedException();
 
       order.setOrderStatus(OrderStatus.CONFIRMED);
     } else {
@@ -177,12 +209,11 @@ public class OrderService {
 
   @Transactional
   public void rejectOrder(UUID orderId) throws UnauthorizedException, ResourceNotFoundException {
-    Order order =
-        orderRepository
-            .findById(orderId)
-            .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+    Order order = orderRepository
+        .findById(orderId)
+        .orElseThrow(
+            () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
       order.setOrderStatus(OrderStatus.REJECTED);
     } else {
@@ -195,23 +226,21 @@ public class OrderService {
   public OrderDTO findOrder(String orderCode)
       throws UnauthorizedException, ResourceNotFoundException {
     String encryptedCode = cryptoConverter.convertToDatabaseColumn(orderCode);
-    Order order =
-        orderRepository
-            .findByOrderCode(encryptedCode)
-            .orElseThrow(
-                () -> new ResourceNotFoundException("Order with Code" + orderCode + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+    Order order = orderRepository
+        .findByOrderCode(encryptedCode)
+        .orElseThrow(
+            () -> new ResourceNotFoundException("Order with Code " + orderCode + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     return new OrderDTO(order);
   }
 
   @Transactional
   public void pickOrder(UUID orderId) throws UnauthorizedException, ResourceNotFoundException {
-    Order order =
-        orderRepository
-            .findById(orderId)
-            .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+    Order order = orderRepository
+        .findById(orderId)
+        .orElseThrow(
+            () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.CONFIRMED)) {
       order.setOrderStatus(OrderStatus.PICKED);
     } else {
@@ -222,12 +251,11 @@ public class OrderService {
 
   @Transactional
   public void cancelOrder(UUID orderId) throws UnauthorizedException, ResourceNotFoundException {
-    Order order =
-        orderRepository
-            .findById(orderId)
-            .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+    Order order = orderRepository
+        .findById(orderId)
+        .orElseThrow(
+            () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
       order.setOrderStatus(OrderStatus.CANCELLED);
     } else {
@@ -244,8 +272,7 @@ public class OrderService {
   private Integer calculateAndSetTotalPrice(Order order) {
     Integer total = 0;
     if (order.getItems() != null && !order.getItems().isEmpty()) {
-      total =
-          order.getItems().stream().mapToInt(i -> i.getQuantity() * i.getPriceAtPurchase()).sum();
+      total = order.getItems().stream().mapToInt(i -> i.getQuantity() * i.getPriceAtPurchase()).sum();
     }
     return total;
   }
